--- a/doc-Provisioning_Virtual_Machines_and_Hosts/Retirement.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/Retirement.adoc
@@ -24,32 +24,30 @@ Through the CloudForms Management Engine console, you can retire a virtual machi
 
 . Navigate to +Services → Workloads+.
 . Select the virtual machine or instance that you want to retire.
-. Click image:2007.png[]+(Lifecycle)+, then image:2010.png[]+(Retire this VM/Instance)+.
+. Click image:2007.png[](+Lifecycle+), then image:2010.png[](+Retire this VM/Instance+).
 
-Result::
 The virtual machine or instance is immediately stopped, and will be shut down if an attempt is made to restart it.
    
 ==== Setting a Retirement Date for a Virtual Machine or Instance
 
 . Navigate to +Services → Workloads+.
 . Select the virtual machine that you want to set a retirement date for.
-. Click image:2007.png[]+(Lifecycle)+, then image:2008.png[]+(Set/remove retirement date)+.
+. Click image:2007.png[](+Lifecycle+), then image:2008.png[](+Set/remove retirement date+).
 . Select a date using the calendar control.
 . Click +Save+.
 
-Result::
 The retirement date is set, and displays in the virtual machine or instance summary screen.
 
 ==== Removing a Retirement Date for a Virtual Machine or Instance
 
 . Navigate to +Services → Workloads+.
 . Select the virtual machine or instance that you want to remove the retirement date from.
-. Click image:2007.png[]+(Lifecycle)+, then click image:2008.png[]+(Set Retirement Date)+.
-. Click image:2009.png[]+(Remove Retirement Date)+.
+. Click image:2007.png[](+Lifecycle+), then click image:2008.png[](+Set Retirement Date+).
+. Click image:2009.png[](+Remove Retirement Date+).
 
 === Setting Retirement in a Provision Request
                 
-If you are using CloudForms Management Engine to provision, you can set when you want retirement in the provision request. To see how to create a request, go to <xref linkend="chap-Provisioning_Requests" />. A warning email will be sent to the owner before the retirement.
+If you are using CloudForms Management Engine to provision, you can set when you want retirement in the provision request. To see how to create a request, go to Provisioning Requests. A warning email will be sent to the owner before the retirement.
                
 ==== Scheduling Retirement in a Provision Request
 
@@ -66,7 +64,7 @@ CloudForms Management Engine +Automate+ includes a method to extend the retireme
 . Click the +Buttons+ accordion.
 . From the +Object Types+ tree, select +VM and Instance+.
 . Navigate to the button group to which you want to add this button. (If you do not have a button group, add one and then create the button.)
-. Click image:1847.png[]+(Configuration)+, then image:1848.png[]+(Add a new Button)+.
+. Click image:1847.png[](+Configuration+), then image:1848.png[](+Add a new Button+).
 . Type in a button text and button hover text, and select the image you want to use.
 . In +Object Details+, select +Request+ from the +/System/Process/+ dropdown. By default, the message is +create+. Do not change it.
 . In +Request+, type +vm_retire_extend+ .
@@ -80,9 +78,9 @@ CloudForms Management Engine +Automate+ includes a method to extend the retireme
 ======
 DOMAIN must be a user-defined Domain and not the locked ManageIQ Domain. If necessary, you can copy the class from the ManageIQ domain into a custom domain.
 
-This example uses the +Cloud+ Namespace but can also use the +Infrastructure+ namespace.
+This example uses the +Cloud+ Namespace, but you can also use the +Infrastructure+ namespace.
 ======
-. Click image:1847.png[]+(Configuration)+, then image:1851.png[]+(Edit this Instance)+.
+. Click image:1847.png[](+Configuration+), then image:1851.png[](+Edit this Instance+).
 . In the Value field, change the +vm_retire_extend_days+ attribute to the new value.
 . Click +Save+.
 image:6299.png[]
