--- a/doc-Provisioning_Virtual_Machines_and_Hosts/Working_with_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/Working_with_Requests.adoc
@@ -7,21 +7,20 @@ In this chapter, you will learn about the different approval methods. The reques
 image:2348.png[]
 When using an external method, the approval actually takes place on the external system and is sent directly for execution. This chapter discusses how to view and edit requests in the CloudForms Management Engine Console, how to approve a request, and how to set automatic approval parameters.
 
-=== Working with Provisioning Requests</title>
+=== Working with Provisioning Requests
 
 After a provisioning request is sent, if you have proper authority, you can copy, edit, delete, approve, or deny a request.
 
 After submission, the appliance assigns each provision request a +Request ID+. If an error occurs during the approval or provisioning process, use this ID to locate the request in the appliance logs. The Request ID consists of the region associated with the request followed by the request number. As regions define a range of one trillion database IDs, this number can be several digits long.
-[EXAMPLE]
-======
+
 *Request ID Format*
+
 Request 99 in region 123 results in Request ID 123000000000099.
-======
         
 ==== Reloading the Status of Provisioning Requests
 
 . Navigate to +Services → Requests+.
-. Click image:2106.png[]+(Reload the current display)+.
+. Click image:2106.png[](+Reload the current display+).
 
 ==== Approving a Provisioning Request
 
@@ -30,20 +29,20 @@ After a user creates provisioning request, administrators have the ability to ap
 . Navigate to +Services → Requests+.
 . Click on the request you want to approve.
 . Type in a +Reason+ for the approval.
-. Click image:1852.png[]+(Approve this request)+.
+. Click image:1852.png[](+Approve this request+).
         
 ==== Denying a Provisioning Request
 
 . Navigate to +Services → Requests+.
 . Click on the request you want to deny.
 . Type in a +Reason+ for the denial.
-. Click image:2009.png[]+(Deny this request)+.
+. Click image:2009.png[](+Deny this request+).
         
-==== Copying a Provisioning Request</title>
+==== Copying a Provisioning Request
 
 . Navigate to +Services → Requests+.
 . Click on the request you want to copy.
-. Click image:1859.png[]+(Copy original provision request)+.
+. Click image:1859.png[](+Copy original provision request+).
 . Make changes to the request.
 . Click +Submit+.
 [NOTE]
@@ -51,54 +50,58 @@ After a user creates provisioning request, administrators have the ability to ap
 If the logged in user is not same as the requester or the request has been already approved or denied, you cannot edit or delete the request.
 ======
        
-==== Editing a Provisioning Request</title>
+==== Editing a Provisioning Request
 
 . Navigate to +Services → Requests+.
 . Click on the request you want to edit.
-. Click image:1851.png[]+(Edit the original provision request)+.
+. Click image:1851.png[](+Edit the original provision request+).
 . Make changes to the request.
 . Click +Submit+.
         
-==== Deleting a Provisioning Request</title>
+==== Deleting a Provisioning Request
 
 . Navigate to +Services → Requests+.
 . Click on the request you want to delete.
-. Click image:1861.png[]+(Delete this request)+.
+. Click image:1861.png[](+Delete this request+).
 . Click +OK+ to confirm.
 
-==== Automatically Approving Requests</title>
+==== Automatically Approving Requests
 
 You can set thresholds for automatic approval of provisioning requests and, therefore, remove the requirement to manually approve the request. You can do this either as a global default or on a per template basis.
     
-===== Enabling Global Defaults for Automatic Approval</title>
+===== Enabling Global Defaults for Automatic Approval
 
 To enable a global set of default approval values, edit the defaults instance by navigating to +Automate → Explorer+, then +DOMAIN → Cloud|Infrastructure → VM → Provisioning → StateMachines → ProvisionRequestApproval+  in the accordion menu. The parameters in this instance are used by the methods in that same class. By default, the maximum number of virtual machines or instances that can be automatically approved for provisioning is 1. To skip the check for the maximum number of virtual machines, set this field to 0. Set this field to -1 to force manual approval. At a minimum, you must change this parameter for all others to be validated.
 
 . Navigate to +Automate → Explorer+.
 . From the tree in the accordion menu, select +DOMAIN → Cloud → VM → Provisioning → StateMachines → ProvisionRequestApproval Class+.
++
 [NOTE]
 ======
 DOMAIN must be a user-defined Domain and not the locked ManageIQ Domain. If necessary, you can copy the class from the ManageIQ domain into a custom domain.
 
 This example uses the +Cloud+ Namespace but can also use the +Infrastructure+ namespace.
 ======
-. Click image:1847.png[]+(Configuration)+, then image:1851.png[]+(Edit this instance)+.
++
+. Click image:1847.png[](+Configuration+), then image:1851.png[](+Edit this instance+).
 image:6280.png[]
++
 [NOTE]
 ======
 Do not change any values other than those listed below. Doing so may prevent the automatic approval process from running.
 ======
++
 * Use +max_cpus+ to set the number of CPUs allowed to approve automatically the provisioning request.
 * Use +max_vms+ to set the maximum number of virtual machines or instances that are allowed to be provisioned automatically approve the request. If this is set to blank, no requests will be automatically approved.
 * Use +max_memory+ to set the maximum memory allowed to approve automatically the provisioning request.
 * Use +max_retirement_days+ to set the maximum number of days until the virtual machine or instance is retired to automatically approve this request.
-* If a value is blank or <parameter>0</parameter>, the parameter is ignored.
+* If a value is blank or +0+, the parameter is ignored.
++
 . Click +Save+.
 
-Result::
 The thresholds for automatic approval are set. The next time a provision request is created these thresholds will be checked. If the requirements are met, the provisioning request will be approved with no user intervention.
    
-===== Template Specific Approval Defaults</title>
+===== Template Specific Approval Defaults
 
 CloudForms Management Engine provides tags that can be used to set default automatic approval values on a per template or image basis. These values +supersede+ those in the +Automate+ model. Use these tags to eliminate the need for manual approval for all provisioning requests. To enable automatic approval, assign the tags directly to templates or images.
 	
@@ -111,14 +114,13 @@ CloudForms Management Engine provides tags that can be used to set default autom
 |Auto Approve Max VM (prov_max_vms)|Sets the maximum number of virtual machines or instances that can be automatically approved in a single provisioning request. Sample Values: 1, 2, 3, 4, 5
 |=======================================================================
  
-===== Assigning Tags to a Template for Auto Approval</title>
+===== Assigning Tags to a Template for Auto Approval
 
 . Navigate to +Infrastructure → Virtual Machines+.
 . Click the +Templates+ accordion, and select the templates that you want to tag.
 . Click image:1941.png[]+(Policy)+, and then image:2158.png[]+(Edit Tags)+.
 . Select a customer tag from the first dropdown, and then a value for the tag.
 
-Result::
 The thresholds for automatic approval for a specific template are set. The next time a provision request is created for this template these thresholds will be checked. If the requirements are met, the provisioning request will be approved with no user intervention.
 
 ===== Setting Provisioning Notification Email Addresses
@@ -127,12 +129,14 @@ CloudForms Management Engine contains a set of Automate instances for provisioni
 
 . Navigate to +Automate → Explorer+.
 . Choose the following Namespace: +DOMAIN → Cloud → VM → Provisioning → Email+.
++
 [NOTE]
 ======
-DOMAIN must be a user-defined Domain and not the locked ManageIQ Domain. If necessary, you can copy the class from the ManageIQ domain into a custom domain.
++DOMAIN+ must be a user-defined Domain and not the locked ManageIQ Domain. If necessary, you can copy the class from the ManageIQ domain into a custom domain.
 
-This example uses the +Cloud+ Namespace but can also use the +Infrastructure+ namespace.
+This example uses the +Cloud+ Namespace, but can also use the +Infrastructure+ namespace.
 ======
++
 . Select an instance within the chosen class.
 . Click image:1847.png[]+(Configuration)+, then image:1851.png[]+(Edit this instance)+.
 . Type the desired email addresses in the +to_email_address+ and +from_email_address+ fields.
