Minor edits to the installation guides ahead of the 4.0 beta.

--- a/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
@@ -5,7 +5,7 @@ CloudForms Management Engine is able to be installed and ready to configure in a
 
 [IMPORTANT]
 =======
-After installing the CloudForms Management Engine Appliance, you must configure the database for Red Hat CloudForms. See Section 2.3, “Configuring a Database for CloudForms Management Engine”.
+After installing the CloudForms Management Engine Appliance, you must configure the database for Red Hat CloudForms. See xref:configuring_a_database[].
 =======
 
 === Obtaining the CloudForms Management Engine Appliance
