--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
@@ -12,12 +12,12 @@ The CloudForms Management Engine Appliance is intended to have minimal configura
 
 The procedure describes how to make changes to the configuration settings on the CloudForms Management Engine appliance.
 
-1.  After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This display the Bash prompt for the **root** user.
-2.  Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-3.  Press +Enter+ to manually configure settings.
-4.  Press the number for the item you want to change, and press +Enter+. The options for your selection are displayed.
-5.  Follow the prompts to make the changes.
-6.  Press +Enter+ to accept a setting where applicable.
+. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
+. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
+. Press +Enter+ to manually configure settings.
+. Press the number for the item you want to change, and press +Enter+. The options for your selection are displayed.
+. Follow the prompts to make the changes.
+. Press +Enter+ to accept a setting where applicable.
 
 [NOTE]
 =======
@@ -67,23 +67,16 @@ See "CPU Sizing Assistant for a Dedicated VMDB Host" in the Deployment Planning 
 Before installing an internal database, add a disk to the infrastructure hosting your appliance. See the documentation specific to your infrastructure for instructions on how to add a disk. As a storage disk usually cannot be added while a virtual machine is running, Red Hat recommends adding the disk before starting the appliance.
 =======
 
-.  Start the appliance and open a terminal from your virtualization or cloud provider.
-.  The login screen appears:
-+
-----
-To administer this appliance, browse to https://192.168.0.40/
-
-Username:
-----
-+
-Enter the administration username and password.
-.  The status screen appears and displays details about the CloudForms Management Engine Appliance. Press +Enter+ to change to the configuration menu.
-.  Select +8) Configure Database+ from the menu.
-.  You are prompted to create or fetch an encryption key.
+. Start the appliance and open a terminal from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
+. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
+. Press +Enter+ to manually configure settings.
+. Select +8) Configure Database+ from the menu.
+. You are prompted to create or fetch an encryption key.
 * If this is the first CFME appliance, choose +1) Create key+.
 * If this is not the first CFME appliance, choose +2) Fetch key+ from remote machine to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
-.  Choose +1) Internal+ for the database location.
-.  Choose a disk for the database. For example:
+. Choose +1) Internal+ for the database location.
+. Choose a disk for the database. For example:
 +
 ----
 1)  /dev/vdb: 20480
@@ -102,7 +95,7 @@ Creating a new region destroys any existing data on the chosen database.
 +
 .  Confirm the configuration when prompted.
 
-Result: CloudForms Management Engine configures the internal database.
+CloudForms Management Engine configures the internal database.
 
 === Configuring an External Database
 
@@ -119,16 +112,9 @@ CloudForms Management Engine 3.x requires PostgreSQL version 9.2.4.
 =======
 
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
-. The login screen appears:
-+
-----
-To administer this appliance, browse to https://192.168.0.40/
-
-Username:
-----
-+
-Enter the administration username and password.
-. The status screen appears and displays details about the CloudForms Management Engine Appliance. Press +Enter+ to change to the configuration menu.
+. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
+. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
+. Press +Enter+ to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key.
 * If this is the first CFME appliance, select the option to create a key.
@@ -146,17 +132,10 @@ CloudForms Management Engine configures the external database.
 
 You can configure a worker appliance through the terminal. These steps demonstrate how to join a worker appliance to an appliance that already has a region configured with a database.
 
-. Start the appliance and open a terminal console from your virtualization or cloud provider.
-. The login screen appears:
-+
------------------------------------------------------------------
-    To administer this appliance, browse to https://192.168.0.40/
-
-    Username:
------------------------------------------------------------------
-+
-Enter the administration username and password.
-. The status screen appears and displays details about the CloudForms Management Engine Appliance. Press +Enter+ to change to the configuration menu.
+. Start the appliance, and open a terminal console from your virtualization or cloud provider.
+. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
+. Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
+. Press +Enter+ to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose +2) External+ for the database location.
