Minor edits to the Release Notes ahead of the 4.0 beta.

--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -88,16 +88,16 @@ The +Red Hat Updates+ page enables you to check for updates and update rgistered
 |=======================================================================
 |Option|Use
 |Check for Updates| Checks for available updates using yum.
-|Register|Attempts to register the appliance if it is not already registered. CloudForms Management Engine subscribes to the rhel-x86_64-server-6-cf-me-3 RHN channel for RHN registered appliances, and to the products designated by Red Hat product certification for subscription-manager registered appliances. The Red Hat Enterprise Linux channels are enabled by default on registration. In addition, CloudForms Management Engine checks for updates after registering.
-|Apply CFME Update|Applies updates to CloudForms Management Engine packages only. Specifically, this option runs the yum -y update cfme-appliance command. This command installs every package listed in the dependency tree if it is not already installed. If a specific version of a package is required, that version of the package is installed or upgraded. No other packages, such as PostgreSQL or Red Hat Enterprise Linux, are updated.
+|Register|Attempts to register the appliance if it is not already registered. CloudForms Management Engine subscribes to the +rhel-x86_64-server-6-cf-me-4+ RHN channel for RHN registered appliances, and to the products designated by Red Hat product certification for subscription-manager registered appliances. The Red Hat Enterprise Linux channels are enabled by default on registration. In addition, CloudForms Management Engine checks for updates after registering.
+|Apply CFME Update|Applies updates to CloudForms Management Engine packages only. Specifically, this option runs the +yum -y update cfme-appliance+ command. This command installs every package listed in the dependency tree if it is not already installed. If a specific version of a package is required, that version of the package is installed or upgraded. No other packages, such as PostgreSQL or Red Hat Enterprise Linux, are updated.
 |=======================================================================
 
 === Updating the Appliance Operating System
 
-Users update CloudForms Management Engine packages through the web console under Configure → Configuration → Settings → Region → Red Hat Updates. However, updating the Appliance's operating system requires a manual update using the +yum+ command.
+Users update CloudForms Management Engine packages through the web console under +Configure → Configuration → Settings → Region → Red Hat Updates+. However, updating the Appliance's operating system requires a manual update using the +yum+ command.
 
 . Log in to the Appliance as the root user.
-. Run the yum update command and confirm any updates.
+. Run the +yum update+ command and confirm any updates.
 +
 ----
 # yum update
